--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-server": "^17.3.3",
     "@angular/router": "^17.3.3",
     "@angular/ssr": "^17.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "pocketbase": "^0.20.3",
     "rxjs": "~7.8.0",
@@ -33,6 +36,7 @@
     "@angular-devkit/build-angular": "^17.3.3",
     "@angular/cli": "^17.3.3",
     "@angular/compiler-cli": "^17.3.3",
+    "@angular/localize": "^17.3.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
