--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "express": "^4.18.2",
     "pocketbase": "^0.20.3",
     "rxjs": "~7.8.0",
