--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@angular/ssr": "^17.1.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "express": "^4.18.2",
+    "ngx-bootstrap": "^12.0.0",
     "pocketbase": "^0.20.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
